--- a/14-day/03-stop-5-fridge-toxins/index.html
+++ b/14-day/03-stop-5-fridge-toxins/index.html
@@ -6,7 +6,7 @@
   <title>Stop These 5 Fridge Toxins During Your Reboot | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="Stop These 5 Fridge Toxins During Your Reboot" />
   <meta property="og:description" content="Discover 5 hidden gut offenders lurking in your fridge—processed sauces, “diet” drinks, leftovers gone bad—remove them now for maximum reset results 🚫🥫" />
   <meta property="og:image" content="https://imgur.com/2x4z21k.jpg" />
