--- a/14-day/03-stop-5-fridge-toxins/index.html
+++ b/14-day/03-stop-5-fridge-toxins/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Stop These 5 Fridge Toxins During Your Reboot" />
   <meta property="og:description" content="Discover 5 hidden gut offenders lurking in your fridge—processed sauces, “diet” drinks, leftovers gone bad—remove them now for maximum reset results 🚫🥫" />
   <meta property="og:image" content="https://imgur.com/2x4z21k.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/stop-5-fridge-toxins" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/03-stop-5-fridge-toxins" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
