--- a/14-day/03-stop-5-fridge-toxins/index.html
+++ b/14-day/03-stop-5-fridge-toxins/index.html
@@ -25,6 +25,36 @@
     img { max-width:100%; height:auto; display:block; margin:20px auto; }
     .benefits { list-style:disc; margin:10px 0 20px 20px; }
     footer { font-size:0.9em; color:#555; margin-top:40px; padding-top:20px; border-top:1px solid #ddd; }
+  
+.related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -78,6 +108,25 @@
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">
       Refresh Your Gut Today – Grab the 14‑Day Reboot!
     </a>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/08-quiet-your-gut-quiet-your-mind" class="product-card" target="_blank">
+<img src="https://imgur.com/RCMe5K6.jpg" alt="Lotus pond merging into gut silhouette underwater with koi fish probiotics swimming peacefully.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/10-detox-without-deprivation" class="product-card" target="_blank">
+<img src="https://imgur.com/OY7TzWb.jpg" alt="A poetic fantasy scene: tired dragon (toxins) being peacefully walked away by glowing mitochondria in armor, symbolizing gentle internal detox.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/10-bloated-and-exhausted-reset-your-gut" class="product-card" target="_blank">
+<img src="https://imgur.com/CUloWL6.jpg" alt="A cozy, smiling woman wrapped in a soft blanket floating on a cloud, surrounded by icons of skin, sleep, and mood—representing total-body wellness.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs & Medical Disclaimer</h3>
